@@ -3,34 +3,39 @@ package nl.nielsvanbruggen.videostreamingplatform.watched;
 import lombok.RequiredArgsConstructor;
 import nl.nielsvanbruggen.videostreamingplatform.media.model.Video;
 import nl.nielsvanbruggen.videostreamingplatform.media.repository.VideoRepository;
-import nl.nielsvanbruggen.videostreamingplatform.media.service.MediaService;
 import nl.nielsvanbruggen.videostreamingplatform.user.model.User;
 import nl.nielsvanbruggen.videostreamingplatform.user.repository.UserRepository;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
+import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@EnableCaching
 public class WatchedService {
     private final UserRepository userRepository;
     private final WatchedRepository watchedRepository;
     private final VideoRepository videoRepository;
     private final WatchedDTOMapper watchedDTOMapper;
-    private final MediaService mediaService;
 
-    public List<WatchedDTO> getWatched(Authentication authentication) {
+    @Cacheable(value = "allWatched", key = "#authentication.getName()")
+    public List<WatchedDTO> getAllWatched(Authentication authentication) {
         User user = userRepository.findByUsername(authentication.getName())
                 .orElseThrow(() -> new IllegalArgumentException("User does not exist."));
 
         return watchedRepository.findAllByUser(user).stream()
                 .map(watchedDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+
+    @CacheEvict(value = "allWatched", key = "#authentication.getName()")
     public void postWatched(WatchedPostRequest request, Authentication authentication) {
         User user = userRepository.findByUsername(authentication.getName())
                 .orElseThrow(() -> new IllegalArgumentException("User does not exist."));
@@ -47,6 +52,5 @@ public class WatchedService {
         watched.setTimestamp(request.getTimestamp());
 
         watchedRepository.save(watched);
-        mediaService.updateAllMedia();
     }
 }
